--- a/bin/user.properties
+++ b/bin/user.properties
@@ -1,4 +1,5 @@
 # password for user john is the MD5 hash of "dslab2012"
 john = f23c5f9779a3804d586f4e73178e4ef0
 # TODO: add more users below..
+# auctionClientUser = EinPasswort
 auctionClientUser = 71e5e859e812b4ac99ead7f896ebc549
