--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
     <property name="client1.port" value="12611"/><!-- UDP port of 1st Bidding Client -->
     <property name="client2.port" value="12612"/><!-- UDP port of 2nd Bidding Client -->
     <property name="client3.port" value="12613"/><!-- UDP port of 3rd Bidding Client -->
-    <property name="mgmtclient.name" value="your.ManagementClient"/><!-- Management Client's full class name (including the package) -->
+    <property name="mgmtclient.name" value="managementClient.ManagementClient"/><!-- Management Client's full class name (including the package) -->
     <property name="analytics.name" value="analyticsserver.AnalyticsServer"/><!-- Analytics Server's full class name (including the package) -->
     <property name="billing.name" value="billingServer.BillingServer"/><!-- Billing Server's full class name (including the package) -->
     <property name="analytics.bindingName" value="AnalyticsServerRef"/><!-- RMI Binding Name of the Analytics Server -->
