testComponent fast fertig implementiert

--- a/build.xml
+++ b/build.xml
@@ -17,6 +17,7 @@
     <property name="analytics.bindingName" value="AnalyticsServerRef"/><!-- RMI Binding Name of the Analytics Server -->
     <property name="billing.bindingName" value="BillingServerRef"/><!-- RMI Binding Name of the Billing Server -->
     <property name="server.port" value="12610"/><!-- TCP port -->
+	<property name="testcomponent.name" value="testComponent.TestComponent"/>
 
     <path id="project.classpath">
         <pathelement location="${build.dir}"/>
@@ -98,10 +99,11 @@
     </target>
 
     <target name="run-loadtest" depends="compile" description="Run Load Test.">
-        <java classname="${client.name}" fork="true" classpathref="project.classpath">
+        <java classname="${testcomponent.name}" fork="true" classpathref="project.classpath">
             <arg value="${server.host}"/>
             <arg value="${server.port}"/>
             <arg value="${analytics.bindingName}"/>
+        	<arg value="${billing.bindingName}"/>
         </java>
     </target>
 
