--- a/bin/loadtest.properties
+++ b/bin/loadtest.properties
@@ -1,7 +1,9 @@
 # TODO: adjust these values
-clients = 100
-auctionsPerMin = 1
-auctionDuration = 2*60
+clients = 1
+# 1
+auctionsPerMin = 15
+auctionDuration = 120
 updateIntervalSec: 20
-bidsPerMin = 2
+# 2
+bidsPerMin = 30
 
